--- a/PointOfSale.Api/Dockerfile
+++ b/PointOfSale.Api/Dockerfile
@@ -1,30 +1,41 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+﻿# Stage 1: Base runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
-USER $APP_UID
 WORKDIR /app
+
+# Expose HTTP and HTTPS ports
 EXPOSE 8080
 EXPOSE 8081
 
-
-# This stage is used to build the service project
+# Stage 2: Build
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["PointOfSale.Api.csproj", "."]
-RUN dotnet restore "./PointOfSale.Api.csproj"
-COPY . .
-WORKDIR "/src/."
-RUN dotnet build "./PointOfSale.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Copy csproj and restore dependencies
+COPY ["PointOfSale.Api.csproj", "./"]
+RUN dotnet restore "PointOfSale.Api.csproj"
+
+# Copy everything else and build
+COPY . .
+RUN dotnet build "PointOfSale.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Stage 3: Publish
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./PointOfSale.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "PointOfSale.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Stage 4: Final image
 FROM base AS final
 WORKDIR /app
+
+# Copy published output
 COPY --from=publish /app/publish .
+
+# Set environment variable để Kestrel lắng nghe cả HTTP và HTTPS
+ENV ASPNETCORE_URLS="http://+:8080"
+ENV DOTNET_RUNNING_IN_CONTAINER=true
+ENV DOTNET_USE_POLLING_FILE_WATCHER=true
+ENV ASPNETCORE_ENVIRONMENT=Development
+
+# Entry point
 ENTRYPOINT ["dotnet", "PointOfSale.Api.dll"]
