--- a/PointOfSale.Api/PointOfSale.Api.csproj
+++ b/PointOfSale.Api/PointOfSale.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="4.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
